--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 							<div class="item">
 								<div class="testimony-slide active text-center">
 									<figure>
-										<img src="images/person3.jpg" alt="user">
+										<img src="images/gates.jpg" alt="user">
 									</figure>
 									<blockquote>
 										<p>This is a fantastic time ot be entering into the business world, because
@@ -161,7 +161,7 @@
 							<div class="item">
 								<div class="testimony-slide active text-center">
 									<figure>
-										<img src="images/person2.jpg" alt="user">
+										<img src="images/Elon Musk.jpg" alt="user">
 									</figure>
 									<blockquote>
 										<p>I want to die on mars, just not by impact.</p>
@@ -172,7 +172,7 @@
 							<div class="item">
 								<div class="testimony-slide active text-center">
 									<figure>
-										<img src="images/person2.jpg" alt="user">
+										<img src="images/Jobs.jpeg" alt="user">
 									</figure>
 									<blockquote>
 										<p>Technology is nothing. What's important is that you have faith in people, that 
