progress made. rest for ubuntu check

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
-						<li><a href="#" data-nav-section="explore"><span>Explore</span></a></li>
 						<li><a href="#" data-nav-section="testimony"><span>Thoughts</span></a></li>
 						<li><a href="#" data-nav-section="services"><span>Projects</span></a></li>
 						<li><a href="#" data-nav-section="team"><span>Team</span></a></li>
@@ -52,7 +51,7 @@
 	  </div>
 	</header>
 
-	<section id="fh5co-home" data-section="home" style="background-image: url(images/bbsr.jpg);" data-stellar-background-ratio="0.5">
+	<section id="fh5co-home" data-section="home" style="background-image: url(images/pexels-photo-356056.jpeg);opacity: 0.97	" data-stellar-background-ratio="0.5">
 		<div class="gradient"></div>
 		<div class="container">
 			<div class="text-wrap">
@@ -60,79 +59,12 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2">
 							<h1 class="to-animate">ZAIRZA</h1>
-							<h2 class="to-animate">The Coding Club Of CET, Bhubaneswar <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"></a> <br><br>
+							<h2 class="to-animate"><b>The Technical Club Of CET, Bhubaneswar</h2></b> <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank"></a> <br><br>
 							<div class="call-to-action">
-								<a href="#" class="demo to-animate">Login</a>
+								<h3 class="to-animate">
+								<a href="#" class="download to-animate">Login</a>
 								<a href="#" class="download to-animate">Submit An Idea</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section id="fh5co-explore" data-section="explore">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate">Explore</h2>
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2 subtext to-animate">
-							<h3>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</h3>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		<div class="fh5co-explore">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-push-5 to-animate-2">
-						<img class="img-responsive" src="images/work_1.png" alt="work">
-					</div>
-					<div class="col-md-4 col-md-pull-8 to-animate-2">
-						<div class="mt">
-							<h3>The College:</h3>
-							<p>The College of Engineering & Technology, Bhubaneswar was established by the Government of Odisha in 1981 to meet the growing technical man-power need of the State. After creation of a Technical University for Odisha, the College has become a Constituent College of Biju Patnaik University of Technology (BPUT), Odisha with effect from 09th July, 2002 as per section-37(1) of BPUT Act, 2002.</p>
-							<ul class="list-nav">
-								<li><i class="icon-check2"></i>Engineering knowledge</li>
-								<li><i class="icon-check2"></i>Design and Development of solutions</li>
-								<li><i class="icon-check2"></i>Investigation of complex problems</li>
-								<li><i class="icon-check2"></i>Ethics</li>
-								<li><i class="icon-check2"></i>Individual and team work</li>
-								<li><i class="icon-check2"></i>Communication</li>
-								<li><i class="icon-check2"></i>Life long learning</li>
-								<li><i class="icon-check2"></i>Project Management and Finance</li>
-							</ul>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-
-		<div class="fh5co-explore fh5co-explore-bg-color">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-pull-1 to-animate-3">
-						<img class="img-responsive" src="images/work.jpg" alt="work">
-					</div>
-					<div class="col-md-4 to-animate-3">
-						<div class="mt">
-							<div>
-								<h4><i class="icon-people"></i>Club</h4>
-								<p>The club was founded in the year 2005 and got an official recognition in the year 2007 as a technical society of CET. The society consists of three wings;
-									Robotics, Software, and Automobile. </p>
-							</div>
-							<div>
-								<h4><i class="icon-video2"></i>Real Projects For Real Solutions</h4>
-								<p>Here we believe in shaping ideas to life. The motto of Zairza is Think, Imagine, Create. </p>
-							</div>
-							<div>
-								<h4><i class="icon-shield"></i>Activity</h4>
-								<p>It is the most active group in the college with an average of over 150+ members from different branches.  </p>
+								</h3>
 							</div>
 						</div>
 					</div>
@@ -152,7 +84,7 @@
 										<img src="images/gates.jpg" alt="user">
 									</figure>
 									<blockquote>
-										<p>This is a fantastic time ot be entering into the business world, because
+										<p>This is a fantastic time to be entering into the business world, because
 										business is going to change more in the next 10 years more than it has in the last 50.</p>
 									</blockquote>
 									<span>Bill Gates, in his <a href="#" class="twitter">Speech</a></span>
@@ -276,7 +208,7 @@
 						<div class="team-box text-center to-animate-2">
 							<div class="user"><img class="img-reponsive" src="images/Rishav.jpg" alt="Roger Garfield"></div>
 							<h3>Rishav Agarwal</h3>
-							<span class="position">Technical</span>
+							<span class="position">Zairza Convenor</span>
 							<p>Content</p>
 							<ul class="social-media">
 								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
@@ -494,9 +426,6 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	
 	<script src="js/owl.carousel.min.js"></script>
-	
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script>
 	
 	<script src="js/main.js"></script>
 
