--- a/index.html
+++ b/index.html
@@ -206,10 +206,9 @@
 				<div class="row">
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/Rishav.jpg" alt="Roger Garfield"></div>
+							<div class="user"><img class="img-reponsive" src="images/rishi.jpg" alt="Rishav Agarwal"></div>
 							<h3>Rishav Agarwal</h3>
 							<span class="position">Zairza Convenor</span>
-							<p>Content</p>
 							<ul class="social-media">
 								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
@@ -220,10 +219,9 @@
 
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/reddy.jpg" alt="Roger Garfield"></div>
+							<div class="user"><img class="img-reponsive" src="images/reddy.jpg" alt="Sanjay Reddy"></div>
 							<h3>Sanjay Reddy</h3>
-							<span class="position">Robotics</span>
-							<p>Content</p>
+							<span class="position">Technical Convenor</span>
 							<ul class="social-media">
 								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
@@ -234,10 +232,9 @@
 
 					<div class="col-md-4">
 						<div class="team-box text-center to-animate-2">
-							<div class="user"><img class="img-reponsive" src="images/asutosh.jpg" alt="Roger Garfield"></div>
+							<div class="user"><img class="img-reponsive" src="images/hota.jpg" alt="Asutosh Hota"></div>
 							<h3>Asutosh Hota</h3>
-							<span class="position">Technical</span>
-							<p>Content</p>
+							<span class="position">Technical Secretary</span>
 							<ul class="social-media">
 								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
 								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
@@ -246,6 +243,49 @@
 						</div>
 					</div>
 				</div>
+				<br>
+				<br>
+				<div class="row">
+					<div class="col-md-4">
+						<div class="team-box text-center to-animate-2">
+							<div class="user"><img class="img-reponsive" src="images/sai.jpg" alt="Saisankar Gochhayat"></div>
+							<h3>Saisankar Gochhayat</h3>
+							<span class="position">Advisor</span>
+							<ul class="social-media">
+								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
+								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
+								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="col-md-4">
+						<div class="team-box text-center to-animate-2">
+							<div class="user"><img class="img-reponsive" src="images/sandy.jpg" alt="Sandeep Mahapatra"></div>
+							<h3>Sandeep Mahapatra</h3>
+							<span class="position">Coordinator</span>
+							<ul class="social-media">
+								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
+								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
+								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="col-md-4">
+						<div class="team-box text-center to-animate-2">
+							<div class="user"><img class="img-reponsive" src="images/chinmay.jpg" alt="Chinmay Das"></div>
+							<h3>Chinmay Das</h3>
+							<span class="position">Coordinator</span>
+							<ul class="social-media">
+								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
+								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
+								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 	</section>
@@ -302,51 +342,6 @@
 	</section>
 
 	<hr>
-
-	<section id="fh5co-trusted" data-section="trusted">
-		<div class="fh5co-trusted">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Trusted By</h2>
-						<div class="row">
-							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">We’re trusted by these popular companies</h3>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					 <div class="col-md-2 col-sm-3 col-xs-6 col-sm-offset-0 col-md-offset-1">
-					 	<div class="partner-logo to-animate-2">
-					 		<img src="images/59636cf55da613085c2b8de8.jpg" alt="Partners" class="img-responsive">
-					 	</div>
-					 </div>
-				    <div class="col-md-2 col-sm-3 col-xs-6">
-				    	<div class="partner-logo to-animate-2">
-				    		<img src="images/accenture-logo-website1.jpg" alt="Partners" class="img-responsive">
-						</div>
-				    </div>
-				    <div class="col-md-2 col-sm-3 col-xs-6">
-				    	<div class="partner-logo to-animate-2">
-				    		<img src="images/Bosch-logo-3D.jpg" alt="Partners" class="img-responsive">
-				    	</div>
-				    </div>
-				    <div class="col-md-2 col-sm-3 col-xs-6">
-				    	<div class="partner-logo to-animate-2">
-				    		<img src="images/maruti-suzuki.png" alt="Partners" class="img-responsive">
-				    	</div>
-				    </div>
-				    <div class="col-md-2 col-sm-12 col-xs-12">
-				    	<div class="partner-logo to-animate-2">
-				    		<img src="images/Tech_Mahindra_Logo.jpg" alt="Partners" class="img-responsive">
-				    	</div>
-				    </div>
-				</div>
-			</div>
-		</div>
-	</section>
-
 	<div class="getting-started getting-started-2">
 		<div class="container">
 			<div class="row">
@@ -412,9 +407,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="map" class="fh5co-map"></div>
 
-	
 	<script src="js/jquery.min.js"></script>
 	
 	<script src="js/jquery.easing.1.3.js"></script>
