--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 						<li class="active"><a href="#" data-nav-section="home"><span>Home</span></a></li>
 						<li><a href="#" data-nav-section="testimony"><span>Thoughts</span></a></li>
 						<li><a href="#" data-nav-section="services"><span>Projects</span></a></li>
+						<li><a href="#" data-nav-section="explore"><span>About Us</span></a></li>
 						<li><a href="#" data-nav-section="team"><span>Team</span></a></li>
 						<li><a href="#" data-nav-section="faq"><span>FAQ</span></a></li>
-						<li class="call-to-action"><a href="#"><span>Sign up free</span></a></li>
 					</ul>
 				</div>
 			</nav>
@@ -129,9 +129,6 @@
 					<p>Come join us and be a part of this very society. Help share ideas and help us develop.</p>
 				</div>
 				<div class="col-md-6 to-animate-2">
-					<div class="call-to-action text-right">
-						<a href="#" class="sign-up">Sign Up For Free</a>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -188,19 +185,27 @@
 				<div class="call-to-action text-center to-animate"><a href="#" class="btn btn-learn">Learn More</a></div>
 			</div>
 		</div>
+	</section>
+	<section id="fh5co-explore" data-section="explore">
+		<div class="container">
+			<div class="row">
+				<h1>About Us:</h1><br><br>
+				ZAIRZA, a society, a cult for CETIANS who want to be ahead in the game. Sure we all have talent, in this club we put our talents through many obstacles and we conquer them. We walk out as winners who not only read books all these years but test the theories and sometimes make our own.
+				The club is managed by its students and alumni. The society was founded in the year 2005 and got a officially recognition in the year 2007 as a technical society of CET. The society consists of three wings<br>
+				1.Robotics Wing<br>
+				2.Software Wing<br>
+				Here at Zairza, we Design, we Create and we Innovate. Extensive research and development is carried out which equips the members with knowledge on various technological fields. Members are actively engaged in taking the society to greater height through their continuous efforts in the field of Engineering.
+				The legacy of Zairza flows down through each batch of CET which empowers us to stand ahead of our counterparts.
+
+			</div>
+		</div>	
 	</section>	
 
 	<section id="fh5co-team" data-section="team">
 		<div class="fh5co-team">
-			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="to-animate">Meet The Team</h2>
-						<div class="row">
-							<div class="col-md-8 col-md-offset-2 subtext">
-								<h3 class="to-animate">Below mentioned are our notable developers: </h3>
-							</div>
-						</div>
+						<h2 class="to-animate">Meet The Team:</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -210,10 +215,8 @@
 							<h3>Rishav Agarwal</h3>
 							<span class="position">Zairza Convenor</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
-							</ul>
+								<li><a href="https://www.facebook.com/rishav.agarwal.5" class="facebook"><i class="icon-facebook"></i></a></li>
+								</ul>
 						</div>
 					</div>
 
@@ -223,9 +226,7 @@
 							<h3>Sanjay Reddy</h3>
 							<span class="position">Technical Convenor</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+								<li><a href="https://www.facebook.com/vamsyksr" class="facebook"><i class="icon-facebook"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -236,9 +237,7 @@
 							<h3>Asutosh Hota</h3>
 							<span class="position">Technical Secretary</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+								<li><a href="https://www.facebook.com/asutosh.hota" class="facebook"><i class="icon-facebook"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -252,10 +251,8 @@
 							<h3>Saisankar Gochhayat</h3>
 							<span class="position">Advisor</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
-							</ul>
+								<li><a href="https://www.facebook.com/saisankargochhayat" class="facebook"><i class="icon-facebook"></i></a></li>
+								</ul>
 						</div>
 					</div>
 
@@ -265,10 +262,8 @@
 							<h3>Sandeep Mahapatra</h3>
 							<span class="position">Coordinator</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
-							</ul>
+								<li><a href="https://www.facebook.com/sandeep97" class="facebook"><i class="icon-facebook"></i></a></li>
+								</ul>
 						</div>
 					</div>
 
@@ -278,10 +273,8 @@
 							<h3>Chinmay Das</h3>
 							<span class="position">Coordinator</span>
 							<ul class="social-media">
-								<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-								<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-								<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
-							</ul>
+								<li><a href="https://www.facebook.com/sandeep97" class="facebook"><i class="icon-facebook"></i></a></li>
+								</ul>
 						</div>
 					</div>
 				</div>
@@ -312,28 +305,29 @@
 							interested into them.</p>
 						</div>
 						<div class="box-faq to-animate-2">
-							<h3>What are the pre-requisites to join here?</h3>
-							<p>As a learner, there are no requirements to join here, only that you have to pay the registeration fees.
-							We will provide you with all the necessary things you need to do.</p>
+							<h3>How can I join?</h3>
+							Zairza conducts its formal events for recruitment into the club. The pre-requisite includes passion for technology and an inquisitive mind. Please contact the club administration for the exact procudures.
+						</p>
 						</div>
 						<div class="box-faq to-animate-2">
 							<h3>What is the scope of Zairza?</h3>
-							<p>As mentioned, Zairza is managed by the CET's strong Alumni base. So, it will be really helpful for anybody
-							who wants to know about any specific thing or is stuck somewhere in between.</p>
+							<p>The talent pool of the club is widely ranged. We have members working on Web Development, Android Development, Embedded Systems, IOT, Robotics, Machine Learning, Computer Vision and Artificial Intelligence. Our Alumnis are placed in prestigious organization around the globe.
+
+						</p>
 						</div>
 					</div>
 
 					<div class="col-md-6">
 						<div class="box-faq to-animate-2">
-							<h3>Does Robotics deal with AI that has emotions?</h3>
-							<p>AI's most certainly will have emotions. Emotions are defined as low-level/ instinctive drives and anticipation
-							of rewards. Most recently, Facebook created an AI which was trained a specific language but after a while, it developed its own language and it was finally shut down.</p>
+							<h3>I have a Tech project. How can Zairza help me?</h3>
+							<p>
+							Zairza can provide you with space and environment to work on your project. We have stable fast internet connection and all the tools, components and other required resources for your project. Given proper report, we can also fund your project. Apart from this, we have senior experienced mentors who will be more than happy to guide you throughout your project.
+							</p>
 						</div>
 						<div class="box-faq to-animate-2">
-							<h3>Does learning different Computer languages help improve your coding skills?</h3>
-							<p>No. Generally, all the languages have the same logic or argument. Leaning any language to the full can make 
-							you a good coder. However, languages like Python use a large database of libraries that come in really handy when 
-							you have to import certain codes in your program.</p>
+							<h3>What are the club timings?</h3>
+							<p>Zairza is open 24 hrs a day. Just coordinate with the members for the key.
+							</p>
 						</div>
 					</div>
 				</div>
@@ -349,11 +343,6 @@
 					<h3>Getting Started</h3>
 					<p>Come join us and be a part of this very society. Help share ideas and help us develop.</p>
 				</div>
-				<div class="col-md-6 to-animate-2">
-					<div class="call-to-action text-right">
-						<a href="#" class="sign-up">Sign Up For Free</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -365,7 +354,7 @@
 					<h3 class="section-title">About Us</h3>
 					<p>Meet the most active club of CET, Bhubaneswar.</p>
 					<p class="copy-right">&copy; 2017 Zairza. <br>All Rights Reserved. <br>
-						Designed by <a href="http://freehtml5.co/" target="_blank">XYZ</a>
+						Designed by <a href="http://freehtml5.co/" target="_blank">Zairza-THE TEAM</a>
 					</p>
 				</div>
 
@@ -373,19 +362,17 @@
 					<h3 class="section-title">Our Address</h3>
 					<ul class="contact-info">
 						<li><i class="icon-map-marker"></i>Kalinga Nagar, Ghatikia, Bhubaneswar, Odisha</li>
-						<li><i class="icon-phone"></i>0674 238 6075</li>
+						<li><i class="icon-phone"></i>+917809296286</li>
 						<li><i class="icon-envelope"></i><a href="#">www.zairza.in</a></li>
 						<li><i class="icon-globe2"></i><a href="#">www.cet.edu.in</a></li>
 					</ul>
 					<h3 class="section-title">Connect with Us</h3>
 					<ul class="social-media">
-						<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-						<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-						<li><a href="#" class="github"><i class="icon-github-alt"></i></a></li>
+						<li><a href="https://www.facebook.com/zairza.cetb/" class="facebook"><i class="icon-facebook"></i></a></li>
+						<li><a href="https://github.com/zairza-cetb/zairzaweb" class="github"><i class="icon-github-alt"></i></a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 to-animate">
-					<h3 class="section-title">Drop us a line</h3>
 					<form class="contact-form">
 						<div class="form-group">
 							<label for="name" class="sr-only">Name</label>
@@ -400,7 +387,7 @@
 							<textarea class="form-control" id="message" rows="7" placeholder="Message"></textarea>
 						</div>
 						<div class="form-group">
-							<input type="submit" id="btn-submit" class="btn btn-send-message btn-md" value="Send Message">
+							<input type="submit" id="btn-submit" class="btn btn-send-message btn-md" href="cet.sac.zairza@gmail.com">
 						</div>
 					</form>
 				</div>
