--- a/index.html
+++ b/index.html
@@ -395,6 +395,10 @@
 					<p>
 						Wonder. Think. Create.
 					</p>
+					<p>Designed by <a href="#" target="_blank">Zairza Web Team</a></p>
+					<p class="copy-right">&copy; 2017 Zairza
+						<br>All Rights Reserved
+					</p>
 				</div>
 
 				<div class="col-md-3 to-animate">
@@ -414,11 +418,8 @@
 					</ul>
 				</div>
 				<div class="col-md-3 to-animate">
-					<h3 class="section-title">Team Zairza</h3>
-					<p>Designed by <a href="#" target="_blank">Zairza Web Team</a></p>
-					<p class="copy-right">&copy; 2017 Zairza
-						<br>All Rights Reserved
-					</p>
+					<h3 class="section-title">Like us on Facebook</h3>
+					<iframe name="f8a373304f5d04" width="300px" height="350px" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" title="fb:page Facebook Social Plugin" src="https://www.facebook.com/v2.3/plugins/page.php?adapt_container_width=true&amp;app_id=&amp;channel=http%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2FZ2duorNoYeF.js%3Fversion%3D42%23cb%3Df2336d46cede1ac%26domain%3Dzairza.in%26origin%3Dhttp%253A%252F%252Fzairza.in%252Ff3d981ea775bd5c%26relation%3Dparent.parent&amp;container_width=263&amp;height=350&amp;hide_cover=false&amp;href=https%3A%2F%2Fwww.facebook.com%2Fzairza.cetb&amp;locale=en_GB&amp;sdk=joey&amp;show_facepile=true&amp;show_posts=true&amp;small_header=true&amp;width=300" style="border: none; visibility: visible; height: 350px;" class=""></iframe>
 				</div>
 				<!-- <div class="col-md-4 to-animate">
 					<form class="contact-form">
